--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -19,5 +19,6 @@
 	  
 	  </ion-list>
 
-	  <ion-button fill="solid" expand="block" color="dark" (click)="login()">Login</ion-button>
+		<ion-button fill="solid" expand="block" color="dark" (click)="login()" >Login</ion-button>
+		<ion-button fill="solid" expand="block" color="dark" (click)="login1()">signInAnonymously</ion-button>
 </ion-content>
