--- a/src/app/edit-profile/edit-profile.page.html
+++ b/src/app/edit-profile/edit-profile.page.html
@@ -25,12 +25,12 @@
 
 			<ion-item>
 				<ion-label position="floating">New Password?</ion-label>
-				<ion-input [(ngModel)]="newpassword"></ion-input>
+				<ion-input type="password" [(ngModel)]="newpassword"></ion-input>
 			</ion-item>
 
 			<ion-item>
 				<ion-label position="floating">Enter old password</ion-label>
-				<ion-input [(ngModel)]="password"></ion-input>
+				<ion-input type="password" [(ngModel)]="password"></ion-input>
 			</ion-item>
 
 			<ion-button fill="solid" expand="block" color="dark" (click)="updateDetails()">Save</ion-button>
