--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -1,3 +1,3 @@
 <div id="loader">
-	<ion-spinner name="bubbles"></ion-spinner>
+	<ion-spinner name="crescent" color="primary"></ion-spinner>
 </div>
