--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,8 +1,8 @@
 <ion-tabs #tabs>
-	<ion-tab-bar slot="bottom">
+	<ion-tab-bar slot="top">
 		<ion-tab-button tab="feed">
 			<ion-icon name="albums"></ion-icon>
-			<ion-label>Feed</ion-label>
+			<ion-label>messeging</ion-label>
 		</ion-tab-button>
 
 		<ion-tab-button tab="uploader">
